--- a/Frontend/CSS/tabla.css
+++ b/Frontend/CSS/tabla.css
@@ -42,12 +42,30 @@ a:hover {
     font-weight: 400;
     line-height: 20px;
     letter-spacing: .0178571429em;
+    padding-top: 16px;
 }
 
 .table {
-    min-width: 100%;
+    width: 100%;
+    border-collapse: collapse;
+    font-size: 12px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
 
-    padding: 0 16px 0 16px;
+.table th {
+    text-align: center;
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+}
+
+.table td {
+    padding: 10px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+}
+
+.table i {
+    padding: 10px;
 }
 
 .card-content {
@@ -63,6 +81,7 @@ a:hover {
 .card-title {
     display: flex;
     padding: 16px 16px 0;
+    border-bottom: 1px solid #ddd;
 }
 
 .subcard-content {
